--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.25",
+		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.0",
@@ -28,7 +28,8 @@
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
+		"vite": "^4.3.6",
+		"postcss-load-config": "^4.0.1"
 	},
 	"type": "module"
 }
