--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/better-sqlite3": "^7.6.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -33,6 +34,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"sqlite3": "^5.1.6"
+		"better-sqlite3": "^8.4.0"
 	}
 }
