Feat: tag suggestions

--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 PUBLIC_IMAGE_SERVER="http://localhost:3001"
 PUBLIC_IMAGE_REPO="works"
 DB_FILE="./data/db.sqlite"
+PUBLIC_TAG_SUGGESTIONS="must-see interesting informative cool"
