Feat: tag group names

--- a/env.example
+++ b/env.example
@@ -2,5 +2,5 @@ PUBLIC_IMAGE_SERVER="http://localhost:3001"
 PUBLIC_IMAGE_REPO="works"
 DB_FILE="./data/db.sqlite"
 PUBLIC_TAG_SUGGESTIONS="red blue green
-must-see must-not-see
-interesting informative cool"
+See: must-see must-not-see
+Opinion: interesting informative cool"
