--- a/env.example
+++ b/env.example
@@ -2,5 +2,6 @@ PUBLIC_IMAGE_SERVER="http://localhost:3001"
 PUBLIC_IMAGE_REPO="works"
 DB_FILE="./data/db.sqlite"
 PUBLIC_TAG_SUGGESTIONS="red blue green
+PUBLIC_RANDOM_SEED="0"
 See: must-see must-not-see
 Opinion: interesting informative cool"
