--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev --host",
-		"build": "vite build && cp package.json build && cp .env build",
+		"build": "vite build && cp package.json build",
 		"docker-build": "sudo docker build -t toftpokk/chrys .",
 		"sync": "./sync_server",
 		"preview": "vite preview",
