--- a/env.example
+++ b/env.example
@@ -2,6 +2,8 @@ PUBLIC_IMAGE_SERVER="http://localhost:3001"
 PUBLIC_IMAGE_REPO="works"
 DB_FILE="./data/db.sqlite"
 PUBLIC_RANDOM_SEED="0"
+WORK_NFS_IP="192.168.1.123"
+WORK_NFS_DEVICE=":data/works"
 PUBLIC_TAG_SUGGESTIONS="Color: blue green
 See: must-see must-not-see
 Opinion: interesting informative cool"
