--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/d3": "^7.4.3",
 		"better-sqlite3": "^10.0.0",
+		"d3": "^7.9.0",
 		"fuse.js": "^6.6.2"
 	}
 }
