--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "chrys",
-	"version": "0.3.0",
 	"private": true,
+	"version": "0.4.0",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev --host",
 		"build": "vite build && cp package.json build",
@@ -10,35 +11,33 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.20.4",
-		"@types/better-sqlite3": "^7.6.4",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
+		"@eslint/compat": "^1.2.3",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.7.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"svelte": "^5.0.0",
+		"svelte-adapter-bun": "^0.5.2",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.4.11"
 	},
-	"type": "module",
 	"dependencies": {
-		"@types/d3": "^7.4.3",
-		"better-sqlite3": "^10.0.0",
-		"d3": "^7.9.0",
-		"fuse.js": "^6.6.2"
+		"@types/better-sqlite3": "^7.6.12",
+		"better-sqlite3": "^11.7.2",
+		"fuse.js": "^7.0.0"
 	}
 }
